--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,6 +61,9 @@
   "configBasicSetup": "Basic Setup",
   "preferredRomRegion": "Preferred ROM Region",
   "preferredRomRegionDesc": "When there are multiple ROMs for a single game, ROMs from this region will show up first in the list, unless another ROM is chosen as the Primary ROM for that game. Common values include 'US', 'JP', and 'EU'.",
+  "retroarchCorePath": "RetroArch Core Path",
+  "retroarchCorePathDesc": "If you wish to use RetroArch as an emulator and have all of its cores loaded automatically, put the path to your cores here. Otherwise, the default location of the \"/cores\" subdirectory of your retroarch instance will be used.",
+  "openConfigFileBtn": "View Config File",
   "configFullScreen": "Full Screen",
   "configChrome": "Show Window Chrome in Windowed Mode",
   "configChromeInfo": "Window Chrome changes will take effect after restarting the program.",
@@ -97,6 +100,12 @@
   "cBrowseImage": "Browse for an Image",
   "eConfig": "Emulator Configuration",
   "eImport": "Import Emulator",
+  "eAddPath": "Type Emulator Path",
+  "eAddPathName": "Add New Emulator",
+  "eAddPathDesc": "Type or paste the file path or file name to your emulator here.",
+  "eAddPathLabel": "Emulator Path or Name",
+  "eAddSave": "Save",
+  "eAddCancel": "Cancel",
   "eName": "Name",
   "ePath": "Emulator Path",
   "eArgs": "Arguments",
